updated Turkish translation

--- a/po/wesnoth-help/tr.po
+++ b/po/wesnoth-help/tr.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: wesnoth-help\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:09+0300\n"
-"PO-Revision-Date: 2019-06-11 10:52+0300\n"
+"PO-Revision-Date: 2019-06-16 12:04+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
 "Language-Team: Turkish\n"
 "Language: tr\n"
@@ -725,7 +725,7 @@ msgid ""
 "It is mostly inhabited by <ref>dst='..race_drake' text='drakes'</ref>.\n"
 "The central island of the archipelago is also called ‘Morogor’."
 msgstr ""
-"Takımadalar, <ref>dst='great_ocean' text='Büyük Okyanus</ref>ta "
+"Takımadalar, <ref>dst='great_ocean' text='Büyük Okyanus'</ref>ta "
 "<ref>dst=great_continent text='Büyük Kıta'</ref>nın batısında ve "
 "<ref>dst='green_isle' text='Yeşil Ada'</ref>nın doğusunda yer alır.\n"
 "Bu adalarda genelde <ref>dst='..race_drake' text='ejderler'</ref> yaşar.\n"
@@ -848,9 +848,9 @@ msgid ""
 "    • Gray Woods: Large forest in the heart of the wilds of Wesnoth, located "
 "between Carcyn and Aldril and generally considered to be haunted."
 msgstr ""
-"Vesnot Krallığı <ref>dst='great_continent' text=''Büyük Kıta'</ref>nın "
-"kuzeye doğru orta kısımlarında bulunur. Resmi seferberliklerin çoğu bu ülke "
-"ve çevresinde döner. Kuzeyde Büyük Nehir, batıda Büyük Okyanus, "
+"Vesnot Krallığı <ref>dst='great_continent' text='Büyük Kıta'</ref>nın kuzeye "
+"doğru orta kısımlarında bulunur. Resmi seferberliklerin çoğu bu ülke ve "
+"çevresinde döner. Kuzeyde Büyük Nehir, batıda Büyük Okyanus, "
 "<ref>dst='southwest_elven_lands' text='güneybatıda'</ref> Eten Ormanı ve "
 "güneydoğuda Acı Bataklığı (ana haritanın sağ alt köşesi) ile sınırlıdır.\n"
 "\n"
@@ -889,7 +889,7 @@ msgstr ""
 "birleşir. Güçlü Kabilelerin Yurdu olup Vesnot'taki en iyi atlar burada "
 "yetiştirilir.\n"
 "    • Estmark Tepeleri: Büyük Nehir'in güneyi ve Veldin Nehrinin doğusunda "
-"yükselen büyükçe sıradağlar. Weldyn Nehrine yakın en kuzeydeki kısmı; "
+"yükselen büyükçe sıradağlar. Veldin Nehrine yakın en kuzeydeki kısmı; "
 "çeşitli zamanlarda Vesnotlara evsahipliği yaptı, ancak krallığın bu "
 "bölgedeki denetimi zayıf olduğundan çeteleşme yaygındır.\n"
 "    • Galin Ormanı: II Haldrik'in oğullarından birinin adını taşıyan orman "
@@ -923,9 +923,9 @@ msgid ""
 msgstr ""
 "Elensefar, bazen <ref>dst='kingdom_wesnoth' text='Vesnot'</ref>'un bir "
 "eyaleti, bazen bağımsız bir ülke ve bazen de Vesnot'un bir federe devleti "
-"olmuştur. Kuzeyde Büyük Nehir, doğuda Wesnoth, güneyde İnciler Körfezi ve "
+"olmuştur. Kuzeyde Büyük Nehir, doğuda Vesnot, güneyde İnciler Körfezi ve "
 "batıda <ref>dst='great_ocean' text='okyanus'</ref> ile gevşek tanımlanmış "
-"bir sınır hattına sahiptir. Daha fazla bilgi Wesnoth'un tarihi anlatısında "
+"bir sınır hattına sahiptir. Daha fazla bilgi Vesnot'un tarihi anlatısında "
 "bulunur.\n"
 "\n"
 "<header>text='Önemli şehirler:'</header>\n"
@@ -986,8 +986,8 @@ msgid ""
 msgstr ""
 "Kuzey Topraklarında bir hükümet yoktur. Bölgeyi çeşitli ork çeteleri, "
 "cüceler, barbarlar ve hatta elfler doldurur. Kuzey ve doğu sınırları "
-"tanımlanmamıştır. Güneyini <ref>dst='great_river' text='Büyük Nehir'</ref, "
-"batısını <ref>dst='great_ocean' text='Büyük Okyanus'</ref> sınırlar.\n"
+"tanımlanmamıştır. Güneyinde <ref>dst='great_river' text='Büyük Nehir'</ref>, "
+"batısında <ref>dst='great_ocean' text='Büyük Okyanus'</ref> bulunur.\n"
 "\n"
 "<header>text='Önemli şehirler:'</header>\n"
 "     • Glamdrol: Bir Orc kabile başkenti.\n"
@@ -3134,7 +3134,7 @@ msgstr ""
 "\n"
 "Bir eklenti yüklemek için listeden seçin ve <bold>text='+'</bold>  simgesine "
 "veya eklentinin başlığına çift tıklayın. Pencere ayrıntıları göstermek için "
-"çok küçükse, <bold>text=''Eklenti Ayrıntıları'</bold> düğmesi, eklenti "
+"çok küçükse, <bold>text='Eklenti Ayrıntıları'</bold> düğmesi, eklenti "
 "hakkında tam bir açıklama, yükleme durumu ve kullanılabilir çeviriler gibi "
 "ek ayrıntılar sağlar."
 
@@ -5191,7 +5191,7 @@ msgstr ""
 "enerjisini sağlarken, bu sihrin işlevleri üzerinde bilinçli bir denetime "
 "sahip değildir.\n"
 "\n"
-"<header>text='Toplum'</ header>\n"
+"<header>text='Toplum'</header>\n"
 "Ejderker nispeten savaşçı bir ırk ve toplumları ise iyi kültürlü savaş "
 "toplulukları olarak tanımlanabilir. Bir ejder kabilesinin çekirdeği, "
 "karşılıklı saygı — ya da basitçe korku — duyulan baskın bir grup tarafından "
@@ -5222,7 +5222,7 @@ msgstr ""
 "kendi türlerinin kahramanca efsanelerinde yer edinmelerine yardımcı olacak "
 "şekilde yaşam sürerler.\n"
 "\n"
-"<header>text='Coğrafya'</ header>\n"
+"<header>text='Coğrafya'</header>\n"
 "Ejderler, <ref>dst='great_ocean' text='Büyük Okyanus'</ref>ta  "
 "<ref>dst='morogor' text='Morogor'</ref>  olarak adlandırılan volkanik "
 "takımadalarda yaşarlar. Nüfus baskısı ve çoğu adanın yoksulluğu ejder "
@@ -5618,11 +5618,11 @@ msgstr ""
 "Vesnot tahtının yönetimi altında yaşar. İnsanlar, önce okyanusun "
 "karşısındaki bir ülkeden Batı’ya, Yeşil Ada’ya, ardından da Büyük Kıtaya "
 "gelip Veldin’de başkenti kurdular. Sonraki yüzyıllarda, kıta boyunca sayısız "
-"şehir inşa ettiler. Wesnoth tahtından askerler bilinen dünyadaki en iyi "
+"şehir inşa ettiler. Vesnot tahtından askerler bilinen dünyadaki en iyi "
 "örgütlenmiş askeri gücü oluşturan ülkeyi korur. Savaşçılar, tüm erkeklerin "
 "erken yaşta askere alındığı ana illerden gelir.\n"
 "\n"
-"<header> text = 'Kabileciler' </header>\n"
+"<header>text='Kabileciler'</header>\n"
 "Kabile Vatanları olarak bilinen Vesnot'un doğu illeri, batıdaki uygar "
 "illerden daha geniş ovalara ve tepelere sahiptir. Bu bölge Vesnot Tahtı ile "
 "ittifak yapan, ancak bağımsız olarak çalışan ve kendi kimliklerini koruyan "
