--- a/po/wesnoth-ai/nl.po
+++ b/po/wesnoth-ai/nl.po
@@ -6,7 +6,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 13:10 UTC\n"
-"PO-Revision-Date: 2019-04-16 07:41+0200\n"
+"PO-Revision-Date: 2019-04-16 08:08+0200\n"
 "Last-Translator: Merijn de Vet <merijndevet@hotmail.com>\n"
 "Language-Team: \n"
 "Language: nl\n"
@@ -1033,7 +1033,7 @@ msgstr "Misschien gaan ze gewoon weg als ik ze negeer?"
 #. [message]: speaker=unit
 #: data/ai/micro_ais/scenarios/goto.cfg:683
 msgid "Lieutenant Senvan's men reporting for duty, sir."
-msgstr "Luitenant Senvans mannen melding zich voor hun plicht, commandant."
+msgstr "Luitenant Senvans mannen melden zich voor hun plicht, commandant."
 
 #. [message]: speaker=fort_commander
 #: data/ai/micro_ais/scenarios/goto.cfg:687
