--- a/po/wesnoth-editor/tr.po
+++ b/po/wesnoth-editor/tr.po
@@ -1,22 +1,22 @@
 # Turkish translations for Battle for Wesnoth package.
-# Copyright (C) 2008 Wesnoth development team
+# Copyright (C) 2019 Wesnoth development team
 # This file is distributed under the same license as the Battle for Wesnoth package.
 #
 # İhsan Akın <ihsan_akin@yahoo.com>, 2005, 2006.
-# Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>, 2008, 2009.
+# Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>, 2008, ..., 2019.
 msgid ""
 msgstr ""
 "Project-Id-Version: wesnoth-editor\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-01-21 21:29+0300\n"
-"PO-Revision-Date: 2009-02-23 19:16+0200\n"
+"PO-Revision-Date: 2019-06-19 11:03+0300\n"
 "Last-Translator: Nilgün Belma Bugüner <nilgun@belgeler.gen.tr>\n"
-"Language-Team: Turkish <wesnoth-tr@googlegroups.com>\n"
+"Language-Team: Turkish\n"
 "Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.11.4\n"
+"X-Generator: Poedit 1.8.11\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
 #. [brush]: id=brush-1
@@ -41,10 +41,8 @@ msgstr "KB-GD Altıgen Hattı"
 
 #. [brush]: id=brush-sw-ne
 #: data/core/editor/brushes.cfg:63
-#, fuzzy
-#| msgid "Hex Line NW-SE"
 msgid "Hex Line SW-NE"
-msgstr "KB-GD Altıgen Hattı"
+msgstr "GB-KD Altıgen Hattı"
 
 #. [editor_group]: id=all
 #: data/core/editor/terrain-groups.cfg:11
@@ -69,7 +67,7 @@ msgstr "çöl"
 #. [editor_group]: id=embellishments
 #: data/core/editor/terrain-groups.cfg:38
 msgid "embellishments"
-msgstr ""
+msgstr "süslemeler"
 
 #. [editor_group]: id=forest
 #: data/core/editor/terrain-groups.cfg:45
@@ -79,7 +77,7 @@ msgstr "orman"
 #. [editor_group]: id=fall
 #: data/core/editor/terrain-groups.cfg:52
 msgid "fall"
-msgstr ""
+msgstr "sonbahar"
 
 #. [editor_group]: id=frozen
 #: data/core/editor/terrain-groups.cfg:59
@@ -99,7 +97,7 @@ msgstr "mağara"
 #. [editor_group]: id=obstacle
 #: data/core/editor/terrain-groups.cfg:80
 msgid "obstacle"
-msgstr ""
+msgstr "engel"
 
 #. [editor_group]: id=village
 #: data/core/editor/terrain-groups.cfg:87
@@ -114,7 +112,7 @@ msgstr "kale"
 #. [editor_group]: id=bridge
 #: data/core/editor/terrain-groups.cfg:101
 msgid "bridge"
-msgstr ""
+msgstr "köprü"
 
 #. [editor_group]: id=special
 #: data/core/editor/terrain-groups.cfg:108
@@ -125,59 +123,57 @@ msgstr "özel"
 #. Describes a scenario in the editor that has not set a time of day schedule
 #: data/core/editor/time-of-day.cfg:6
 msgid "time of day^None"
-msgstr ""
+msgstr "günün vakti"
 
 #. [editor_times]: id=test
 #: data/core/editor/time-of-day.cfg:11
 msgid "Test"
-msgstr ""
+msgstr "Deneme"
 
 #. [editor_times]: id=default
 #: data/core/editor/time-of-day.cfg:22
 msgid "Default"
-msgstr ""
+msgstr "Öntanımlı"
 
 #. [editor_times]: id=summer
 #: data/core/editor/time-of-day.cfg:28
 msgid "Summer"
-msgstr ""
+msgstr "Yaz"
 
 #. [editor_times]: id=winter
 #: data/core/editor/time-of-day.cfg:34
 msgid "Winter"
-msgstr ""
+msgstr "Kış"
 
 #. [editor_times]: id=underground
 #: data/core/editor/time-of-day.cfg:40
 msgid "Underground"
-msgstr ""
+msgstr "Yeraltı"
 
 #. [editor_times]: id=deep_underground
 #: data/core/editor/time-of-day.cfg:46
 msgid "Deep Underground"
-msgstr ""
+msgstr "Derin Yeraltı"
 
 #. [editor_times]: id=indoors
 #: data/core/editor/time-of-day.cfg:52
 msgid "Indoors"
-msgstr ""
+msgstr "içerde"
 
 #. [editor_times]: id=24
 #: data/core/editor/time-of-day.cfg:58
 msgid "24 Hour Schedule"
-msgstr ""
+msgstr "24 Saatlik Çizelge"
 
 #. [editor_times]: id=after_the_fall
 #: data/core/editor/time-of-day.cfg:64
 msgid "After the Fall"
-msgstr ""
+msgstr "Düşüşten Sonra"
 
 #. [theme]: id=editor
 #: data/themes/editor.cfg:11
-#, fuzzy
-#| msgid "Quit Editor"
 msgid "theme^Editor"
-msgstr "Düzenleyiciden çıkılsın mı?"
+msgstr "Düzenleyici"
 
 #. [menu]: id=menu-editor-file, type=turbo
 #: data/themes/editor.cfg:61
@@ -187,7 +183,7 @@ msgstr "Dosya"
 #. [menu]: id=menu-editor-recent
 #: data/themes/editor.cfg:72
 msgid "Load Recent"
-msgstr ""
+msgstr "Son Yüklenen"
 
 #. [menu]: id=menu-editor-map
 #: data/themes/editor.cfg:90
@@ -197,12 +193,12 @@ msgstr "Harita"
 #. [menu]: id=menu-unit-facing
 #: data/themes/editor.cfg:98
 msgid "Unit Facing"
-msgstr ""
+msgstr "Karşı Birim"
 
 #. [menu]: id=menu-editor-transitions
 #: data/themes/editor.cfg:104
 msgid "Transition Update"
-msgstr ""
+msgstr "Geçiş Güncellemesi"
 
 #. [menu]: id=menu-editor-window
 #: data/themes/editor.cfg:111
@@ -212,22 +208,22 @@ msgstr "Pencere"
 #. [menu]: id=menu-editor-areas
 #: data/themes/editor.cfg:120
 msgid "Areas"
-msgstr ""
+msgstr "Alanlar"
 
 #. [menu]: id=menu-editor-local-time
 #: data/themes/editor.cfg:128
 msgid "Assign Local Time"
-msgstr ""
+msgstr "Yerel Zamanı Ata"
 
 #. [menu]: id=menu-editor-local-schedule
 #: data/themes/editor.cfg:134
 msgid "Assign Local Time Schedule"
-msgstr ""
+msgstr "Yerel Zaman Çizelgesini Ata"
 
 #. [menu]: id=menu-editor-side
 #: data/themes/editor.cfg:142
 msgid "Side"
-msgstr ""
+msgstr "Taraf"
 
 #. [label]: id=villages-icon
 #: data/themes/editor.cfg:159
@@ -237,46 +233,46 @@ msgstr "köyler"
 #. [label]: id=units-icon
 #: data/themes/editor.cfg:175
 msgid "units"
-msgstr ""
+msgstr "birimler"
 
 #. [menu]: id=switch_time
 #: data/themes/editor.cfg:454
 msgid "Time Schedule Menu"
-msgstr ""
+msgstr "Zaman Çizelgesi Menüsü"
 
 #. [menu]: id=menu-playlist
 #: data/themes/editor.cfg:465
 msgid "Playlist"
-msgstr ""
+msgstr "Çalma Listesi"
 
 #. [menu]: id=menu-editor-schedule
 #: data/themes/editor.cfg:471
 msgid "Assign Time Schedule"
-msgstr ""
+msgstr "Zaman Çizelgesini Ata"
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:62
 msgid "Identifier: "
-msgstr ""
+msgstr "Tanımlayıcı: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:63
 msgid "Name: "
-msgstr ""
+msgstr "Ad: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:64
 msgid "Type: "
-msgstr ""
+msgstr "Tür: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:65
 msgid "Level: "
-msgstr ""
+msgstr "Seviye: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:66
 msgid "Cost: "
-msgstr ""
+msgstr "Bedel: "
 
 #: src/editor/action/mouse/mouse_action_unit.cpp:67
 msgid "Recruit: "
-msgstr ""
+msgstr "Askere Alım: "
 
 #: src/editor/controller/editor_controller.cpp:178
 msgid "Fatal error"
@@ -287,15 +283,11 @@ msgid "Do you really want to quit?"
 msgstr "Gerçekten çıkmak istiyor musunuz?"
 
 #: src/editor/controller/editor_controller.cpp:210
-#, fuzzy
-#| msgid ""
-#| "Do you really want to quit? Changes in the map since the last save will "
-#| "be lost."
 msgid ""
 "Do you really want to quit? Changes to this map since the last save will be "
 "lost."
 msgstr ""
-"Gerçekten çıkmak mı istiyorsunuz? Son kayıttan beri yaptığınız "
+"Gerçekten çıkmak mı istiyorsunuz? Son kayıttan beri bu haritada yaptığınız "
 "değişiklikleri kaybedeceksiniz."
 
 #: src/editor/controller/editor_controller.cpp:212
@@ -312,55 +304,47 @@ msgstr "Bir vakit düzenleyici yok."
 
 #: src/editor/controller/editor_controller.cpp:1147
 msgid "Change Unit ID"
-msgstr ""
+msgstr "Birim Kimliğini Değiştir"
 
 #: src/editor/controller/editor_controller.cpp:1148
 msgid "ID:"
-msgstr ""
+msgstr "Kimlik:"
 
 #: src/editor/controller/editor_controller.cpp:1164
 msgid "Rename Unit"
-msgstr ""
+msgstr "Birim Adını Değiştir"
 
 #: src/editor/controller/editor_controller.cpp:1165
 msgid "Name:"
-msgstr ""
+msgstr "Ad:"
 
 #: src/editor/map/context_manager.cpp:205
 msgid "Load Map"
-msgstr ""
+msgstr "Harita yükle"
 
 #: src/editor/map/context_manager.cpp:273 src/editor/map/map_context.cpp:838
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Map"
-msgstr "(Yeni Harita)"
+msgstr "Yeni Harita"
 
 #: src/editor/map/context_manager.cpp:286 src/editor/map/map_context.cpp:838
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Scenario"
-msgstr "(Yeni Harita)"
+msgstr "Yeni Senaryo"
 
 #: src/editor/map/context_manager.cpp:342
 msgid "No Recent Files"
-msgstr ""
+msgstr "Dosya Yok"
 
 #: src/editor/map/context_manager.cpp:380
-#, fuzzy
-#| msgid "(New Map)"
 msgid "Unnamed Area"
-msgstr "(Yeni Harita)"
+msgstr "İsimsiz Alan"
 
 #: src/editor/map/context_manager.cpp:411
-#, fuzzy
-#| msgid "(New Map)"
 msgid "New Side"
-msgstr "(Yeni Harita)"
+msgstr "Yeni Taraf"
 
 #: src/editor/map/context_manager.cpp:467
 msgid "Apply Mask"
-msgstr ""
+msgstr "Maske Uygula"
 
 #: src/editor/map/context_manager.cpp:476
 msgid "Error loading mask"
@@ -368,11 +352,11 @@ msgstr "Örüntü yüklenirken hata"
 
 #: src/editor/map/context_manager.cpp:496
 msgid "Identifier:"
-msgstr ""
+msgstr "Tanımlayıcı:"
 
 #: src/editor/map/context_manager.cpp:496
 msgid "Rename Area"
-msgstr ""
+msgstr "Alan Adını Değiştir"
 
 #: src/editor/map/context_manager.cpp:510
 msgid "Choose Target Map"
@@ -384,16 +368,12 @@ msgid "Error loading map"
 msgstr "Harita yüklenirken hata"
 
 #: src/editor/map/context_manager.cpp:645
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Map As"
-msgstr "Haritayı Farklı Kaydet"
+msgstr "Haritayı Şöyle Kaydet"
 
 #: src/editor/map/context_manager.cpp:666
-#, fuzzy
-#| msgid "Save the Map As"
 msgid "Save Scenario As"
-msgstr "Haritayı Farklı Kaydet"
+msgstr "Senaryoyu Şöyle Kaydet"
 
 #: src/editor/map/context_manager.cpp:698
 msgid "No random map generators found."
@@ -409,20 +389,14 @@ msgid "Unsaved Changes"
 msgstr "Kaydedilmemiş Değişiklikler"
 
 #: src/editor/map/context_manager.cpp:732
-#, fuzzy
-#| msgid ""
-#| "Do you want to discard all changes you made to the map since the last "
-#| "save?"
 msgid "Do you want to discard all changes made to the map since the last save?"
 msgstr ""
-"Son kayıttan beri haritada yaptığınız değişiklikleri iptal etmek mi "
-"istiyorsunuz?"
+"Son kayıttan beri haritada yaptığınız tüm değişiklikleri iptal etmek istiyor "
+"musunuz?"
 
 #: src/editor/map/context_manager.cpp:788
-#, fuzzy
-#| msgid "This map is already open."
 msgid "This scenario is already open."
-msgstr "Bu harita zaten açık."
+msgstr "Bu senaryo zaten açık."
 
 #: src/editor/map/context_manager.cpp:811
 #: src/editor/map/context_manager.cpp:874
@@ -430,10 +404,8 @@ msgid "This map is already open."
 msgstr "Bu harita zaten açık."
 
 #: src/editor/map/context_manager.cpp:835
-#, fuzzy
-#| msgid "Map saved."
 msgid "Scenario saved."
-msgstr "Harita kaydedildi."
+msgstr "Senaryo kaydedildi."
 
 #: src/editor/map/context_manager.cpp:850
 msgid "Map saved."
@@ -441,23 +413,25 @@ msgstr "Harita kaydedildi."
 
 #: src/editor/map/context_manager.cpp:907
 msgid "Loaded embedded map data"
-msgstr ""
+msgstr "Gömülü harita verisi yüklendi"
 
 #: src/editor/map/context_manager.cpp:908
 #: src/editor/map/context_manager.cpp:921
 msgid "Map loaded from scenario"
-msgstr ""
+msgstr "Harita senaryodan yüklendi"
 
 #: src/editor/map/context_manager.cpp:918
 msgid ""
 "Loaded referenced map file:\n"
 "$new"
 msgstr ""
+"Başvurulan harita dosyası yüklendi:\n"
+"$new"
 
 #: src/editor/map/editor_map.cpp:148
 #: src/editor/palette/location_palette.cpp:119
 msgid "Player $side_num"
-msgstr ""
+msgstr "$side_num. taraf oyuncusu"
 
 #: src/editor/map/editor_map.cpp:283
 msgid "The size of the target map is different from the current map"
@@ -465,29 +439,27 @@ msgstr "Hedef harita bundan farklı boyutlarda"
 
 #: src/editor/map/map_context.cpp:145
 msgid "File not found"
-msgstr ""
+msgstr "Dosya bulunamadı"
 
 #: src/editor/map/map_context.cpp:152
-#, fuzzy
 msgid "Empty file"
-msgstr "Harita dosyası ya boş ya da yok."
+msgstr "Boş dosya"
 
 #: src/editor/map/map_context.cpp:208
 msgid ""
 "The map file looks like a scenario, but the map_data value does not point to "
 "an existing file"
 msgstr ""
+"Harita dosyası bir senaryo gibi görünüyor, fakat map_data değeri mevcut bir "
+"dosyaya ait değil."
 
 #: src/editor/map/map_context.cpp:604
-#, fuzzy
-#| msgid "Could not save the map: $msg"
 msgid "Could not save the scenario: $msg"
-msgstr "Harita kaydedilemedi: $msg"
+msgstr "Senaryo kaydedilemedi: $msg"
 
 #: src/editor/map/map_context.cpp:639
-#, fuzzy
 msgid "Could not save into scenario"
-msgstr "Harita kaydedilemedi: $msg"
+msgstr "Senaryoya kaydedilemedi"
 
 #: src/editor/map/map_context.cpp:649
 msgid "Could not save the map: $msg"
@@ -495,27 +467,27 @@ msgstr "Harita kaydedilemedi: $msg"
 
 #: src/editor/palette/editor_palettes.cpp:51
 msgid "(Unknown Group)"
-msgstr ""
+msgstr "(Bilinmeyen Grup)"
 
 #: src/editor/palette/editor_palettes.cpp:284
 msgid "(non-core)"
-msgstr ""
+msgstr "(Çekidek-dışı)"
 
 #: src/editor/palette/editor_palettes.cpp:285
 msgid "Will not work in game without extra care."
-msgstr ""
+msgstr "Elden geçirilmedikçe oyunda çalışmaz."
 
 #: src/editor/palette/location_palette.cpp:256
 msgid "Go To"
-msgstr ""
+msgstr "Git"
 
 #: src/editor/palette/location_palette.cpp:263
 msgid "Add"
-msgstr ""
+msgstr "Ekle"
 
 #: src/editor/palette/location_palette.cpp:265
 msgid "New Location Identifier"
-msgstr ""
+msgstr "Yeni Konum Belirteci"
 
 #: src/editor/palette/location_palette.cpp:272
 msgid "Error"
@@ -523,43 +495,39 @@ msgstr "Hata"
 
 #: src/editor/palette/location_palette.cpp:273
 msgid "Invalid location id"
-msgstr ""
+msgstr "Konum kimliği geçersiz"
 
 #: src/editor/palette/location_palette.cpp:280
 msgid "Delete"
-msgstr ""
+msgstr "Sil"
 
 #: src/editor/palette/terrain_palettes.cpp:231
 msgid "FG: "
-msgstr ""
+msgstr "ÖY:"
 
 #: src/editor/palette/terrain_palettes.cpp:232
 msgid "BG: "
-msgstr ""
+msgstr "AY:"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:137
 msgid "Clipboard support not found, contact your packager"
-msgstr ""
+msgstr "Pano desteği yok, paketleyicinize başvurun"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:201
-#, fuzzy
-#| msgid "Choose player"
 msgid "Choose File"
-msgstr "Oyuncu seçiniz"
+msgstr "Dosya seçiniz"
 
 #: src/gui/dialogs/editor/custom_tod.cpp:202
 msgid "Select"
-msgstr ""
+msgstr "Seç"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:84
-#, fuzzy
-#| msgid "(Player)^None"
 msgid "player^None"
 msgstr "Hiçbiri"
 
 #: src/gui/dialogs/editor/set_starting_position.cpp:97
 msgid "Player $player_number"
-msgstr ""
+msgstr "$player_number. Oyuncu"
 
 #~ msgid "(New Map)"
 #~ msgstr "(Yeni Harita)"
