German Translation: partial TSG-update

--- a/po/wesnoth-lib/de.po
+++ b/po/wesnoth-lib/de.po
@@ -10,7 +10,7 @@ msgstr ""
 "Project-Id-Version: Battle for Wesnoth 1.14\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2019-03-11 16:09+0300\n"
-"PO-Revision-Date: 2019-03-21 00:57+0100\n"
+"PO-Revision-Date: 2019-06-25 16:43+0200\n"
 "Last-Translator: Aaron Winter <winter.aaron93@gmail.com>\n"
 "Language-Team: irc://irc.freenode.net/#wesnoth-de\n"
 "Language: de_DE\n"
@@ -4638,7 +4638,7 @@ msgstr "Zeigt animierte Geländegrafiken an (kann die Performance beeinflussen)"
 #. [toggle_button]: id=animate_units_standing
 #: data/gui/window/preferences/03_display.cfg:142
 msgid "Show unit standing animations"
-msgstr "Untätigkeitsanimationen der Einheiten anzeigen"
+msgstr "Standanimationen der Einheiten anzeigen"
 
 #. [toggle_button]: id=animate_units_standing
 #: data/gui/window/preferences/03_display.cfg:143
