fixed error in Turkish manpages

--- a/po/wesnoth-manpages/tr.po
+++ b/po/wesnoth-manpages/tr.po
@@ -162,7 +162,7 @@ msgid ""
 "goes directly to the campaign with id I<id_campaign>.  A selection menu will "
 "appear if no id was specified."
 msgstr ""
-"<seferberlik> kimliği ile doğrudan seferberliğe gider. Kimlik "
+"I<seferberlik> kimliği ile doğrudan seferberliğe gider. Kimlik "
 "belirtilmemişse bir seçim menüsü görünecektir."
 
 #. type: TP
