more Turkish translation manpages fixes

--- a/po/wesnoth-manpages/tr.po
+++ b/po/wesnoth-manpages/tr.po
@@ -719,7 +719,7 @@ msgid ""
 "B<--script>, but Lua file should return a function which will be run as a "
 "coroutine and periodically woken up with updates."
 msgstr ""
-"(deneysel) bir wesnoth eklentisini tanımlayan bir <betik> yükler. B<--"
+"(deneysel) bir wesnoth eklentisini tanımlayan bir I<betik> yükler. B<--"
 "script> gibidir, ancak Lua dosyası, bir alt yordam olarak çalıştırılacak ve "
 "periyodik olarak güncellemelerle uyanacak bir işlev döndürmelidir."
 
